--- a/section2/index.html
+++ b/section2/index.html
@@ -5,11 +5,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Lumanosimo&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" 
+      rel="stylesheet"
+      >
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Main page</title>
   </head>
 
   <body>
-    <h1>Hello World</h1>
+    <img src="./images/challenges-trophy.jpg" alt="A trophy">
+    <h1>Max' Challenge for Wednesday, August 4th</h1>
+    <p id="todays-challenge">
+      Learn about the basics of web development - specifically dive into HTML & CSS.
+    </p>
+    <p>Explore the <a href="./full-week.html">full week</a></p>
+    <p>
+      I'll achieve this goal by diving into <a target ="_blank" href="https://academind.com/">more learning resources</a>.
+    </p>
   </body>
-
+  
 </html>
